fix: fixed typo

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /account/__pycache__
-/acount/migrations
+/account/migrations/
 
 /clothes/__pycache__
-/clothes/migrations
+/clothes/migrations/
 
 /sape/__pycache__
