--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 asgiref==3.7.2
+boto3==1.34.68
+botocore==1.34.68
 Django==5.0.3
 django-filter==24.1
+django-storages==1.14.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+jmespath==1.0.1
 Markdown==3.5.2
+pillow==10.2.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
+s3transfer==0.10.1
+six==1.16.0
 sqlparse==0.4.4
+urllib3==2.2.1
