--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,23 @@
 version: '3.8'
 
 services:
-  db:
+  db_sape:
+    container_name: db_sape
     image: postgres:16
     env_file:
       - .env
     ports:
-      - "5432"
+      - "5436:5432"
     volumes:
       - sape-data:/var/lib/postgresql/data
     networks:
       - sape
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   adminer:
     container_name: adminer
@@ -25,27 +32,26 @@ services:
     networks:
       - sape
     depends_on:
-      - db
+      - db_sape
 
   minio:
-    container_name: minio
     image: 'minio/minio:latest'
     ports:
-        - '9000'
-        - '8900:8900'
+      - '9000'
+      - '8900:8900'
     env_file:
       - .env
     volumes:
-        - 'minio:/data/minio'
+      - 'minio:/data/minio'
     command: 'minio server /data/minio --console-address ":8900"'
     healthcheck:
-        test:
-            - CMD
-            - curl
-            - '-f'
-            - 'http://localhost:9000/minio/health/live'
-        retries: 3
-        timeout: 5s
+      test:
+        - CMD
+        - curl
+        - '-f'
+        - 'http://localhost:9000/minio/health/live'
+      retries: 3
+      timeout: 5s
     networks:
       - sape
 
@@ -57,15 +63,11 @@ services:
     depends_on:
       - minio
     entrypoint: >
-      /bin/sh -c "
-      /usr/bin/mc config host add myminio http://minio:9000 minioadmin minioadmin;
-      /usr/bin/mc mb --quiet myminio/userclothespictures;
-      /usr/bin/mc policy set none myminio/userclothespictures;
-      "
+      /bin/sh -c " /usr/bin/mc config host add myminio http://minio:9000 minioadmin minioadmin; /usr/bin/mc mb --quiet myminio/userclothespictures; /usr/bin/mc policy set none myminio/userclothespictures; "
     networks:
       - sape
-
   sape:
+    container_name: sape_django
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
@@ -73,15 +75,25 @@ services:
     ports:
       - "8003:8000"
     depends_on:
-      - db
-      - minio
-    restart: always
+      - "db_sape"
+      - "minio"
     networks:
       - sape
+      - traefik-network
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.sape.tls=true
+      - traefik.http.routers.sape.entrypoints=websecure
+      - traefik.http.routers.sape.tls.certresolver=traefik
+      - traefik.http.routers.sape.rule=Host(`${SUBDOMAIN}.${DOMAIN_NAME}`)
+      - traefik.http.services.sape.loadbalancer.server.port=8003
+      - traefik.docker.network=traefik-network
 
 networks:
   sape:
-    name: sape
+    external: true
+  traefik-network:
+    external: true
 
 volumes:
   sape-data:
