--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,52 @@
 asgiref==3.7.2
+attrs==23.2.0
 boto3==1.34.68
 botocore==1.34.68
+certifi==2024.2.2
+charset-normalizer==3.3.2
+coloredlogs==15.0.1
 Django==5.0.3
 django-filter==24.1
 django-storages==1.14.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+flatbuffers==24.3.7
+humanfriendly==10.0
+idna==3.6
+imageio==2.34.0
 jmespath==1.0.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+lazy_loader==0.3
+llvmlite==0.42.0
 Markdown==3.5.2
+mpmath==1.3.0
+networkx==3.2.1
+numba==0.59.1
+numpy==1.26.4
+onnxruntime==1.17.1
+opencv-python-headless==4.9.0.80
+packaging==24.0
 pillow==10.2.0
+platformdirs==4.2.0
+pooch==1.8.1
+protobuf==5.26.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+PyMatting==1.1.12
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+referencing==0.34.0
+rembg==2.0.56
+requests==2.31.0
+rpds-py==0.18.0
 s3transfer==0.10.1
+scikit-image==0.22.0
+scipy==1.12.0
 six==1.16.0
 sqlparse==0.4.4
+sympy==1.12
+tifffile==2024.2.12
+tqdm==4.66.2
 urllib3==2.2.1
